src/components/Home.css
@font-face {
    font-family: 'NatashaFont';
    src: url('../fonts/Natashafont-Regular.woff') format('woff');
}

.home-page{
    padding-top: 100px;
    flex-direction: column;
    align-items: center;
    display: flex;
}

.home-image {
    display: block;
    height: 500px;
    width: auto
}

.my-name {
    font-family: 'NatashaFont';
    position: relative;
    font-size: 110px;
    font-weight: 700;
    text-align: center;
}

.PSA-text{
    font-family: 'NatashaFont';
    position: relative;
    font-size: 40px;
    font-weight: 200;
    text-align: center;
    color: rgb(189, 128, 115);
    margin-top: 10px;
}

.my-name-top { 
    color: rgba(255, 255, 255, 0);
    -webkit-text-stroke: 0.4px rgb(77, 60, 62);
    transform: translateZ(0);
    
    position: absolute;
    z-index: 2;
    left: -1px;   /* horizontal offset */
    top: 10px;
}

.my-name-top.safari {
    -webkit-text-stroke: 1.3px rgb(77,60,62);
}

.my-name-bottom {
    color: rgb(189, 128, 115);
    
    position: relative;
    z-index: 1;
}

.skills-and-experience{
    background: linear-gradient(to bottom, white, #b78a80);
    width: 100%;
}

.detail {
    color: #4d4c4c !important;
    text-align: left !important;
}

.heading-experience {
    font-family: 'NatashaFont';
    font-weight: 700 !important;
}

.ul_Home {
    width: 65%;
}

.heading-heading {
    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif !important;
    border: 2px solid #b78a80;
    background-color: #b78a80;
    padding: 5px;
    margin: 20px;
    color: white;
    text-align: left;
    font-size: 20px !important;
}

@media (min-width: 1501px) {
    .heading-experience {
        font-size: 25px !important;
    }

    .li_Home {
        padding: 5px;
    }
}

/* desktop */
@media (min-width: 1000px) and (max-width: 1500px) {
    .detail {
        font-size: 40px !important;
    }

    .li_Home {
        font-size: 25px;
    }

    .heading-experience {
        font-size: 25px !important;
    }
    
    .info {
        font-size: 18px !important;
        padding: 4px !important;
        padding-left: 20px !important;
    }

    .info-company {
        font-size: 18px !important;
        padding: 4px !important;
    }

    .info-experience {
        font-size: 18px !important;
        padding-bottom: 10px !important;
    }
}

/**/
@media (min-width: 600px) and (max-width: 999px) {
    .home-page{
        padding-top: 150px;
    }

    .detail {
        font-size: 25px !important;
        margin-left: 20px;
    }

    .heading {
        font-size: 25px !important;
    }

    .heading-experience {
        font-size: 25px !important;
    }
    
    .info {
        font-size: 15px !important;
        padding-left: 5px !important;
        padding-right: 5px !important;
        margin-left: 20px;
    }

    .info-company {
        font-size: 15px !important;
        padding-left: 5px !important;
        padding-right: 5px !important;
    }

    .info-experience {
        font-size: 15px !important;
        padding-bottom: 20px !important;
    }
  }

/* smallest window width on my mac */
@media (min-width: 500px) and (max-width: 599px) {
    .home-image{
        height: 300px;
        width: auto
    }

    .home-page{
        padding-top: 200px;
    }

    .detail {
        font-size: 25px !important;
    }

    .vl {
        padding: 15px !important;
    }

    .heading {
        font-size: 20px !important;
        padding-bottom: 10px;
        padding-left: 10px !important;
        padding-right: 10px !important;
    }

    .heading-experience {
        font-size: 20px !important;
        padding-bottom: 10px;
    }
    
    .info {
        font-size: 15px !important;
        padding-bottom: 5px;
        padding-left: 30px !important;
        padding-right: 10px !important;
    }

    .info-company {
        font-size: 8px !important;
        padding-bottom: 5px;
        padding-left: 10px !important;
        padding-right: 10px !important;
    }

    .info-experience {
        font-size: 15px !important;
        padding-bottom: 5px;
    }
}

/* mobile */
@media (max-width: 499px) {
    .home-image {
        height: 180px;
        width: auto;
    }

    .PSA-text {
        font-size: 24px;
    }

    .detail {
        font-size: 25px !important;
    }

    .vl {
        padding: 15px !important;
    }

    .heading {
        font-size: 14px !important;
        padding-bottom: 10px;
        padding-left: 10px !important;
        padding-right: 10px !important;
    }

    .heading-experience {
        font-size: 14px !important;
        padding-bottom: 10px;
    }

    .info {
        font-size: 14px !important;
        padding-bottom: 5px;
        padding-right: 10px !important;
    }

    .info-company {
        font-size: 14px !important;
        padding-bottom: 5px;
        padding-right: 10px !important;
    }

    .info-experience {
        font-size: 14px !important;
        padding-bottom: 5px;
    }
}

